--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-"Hello World"
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>kyritsis.net</title>
+  </head>
+  <body>
+    <p>Hello World!</>
+  </body>
+</html>
